# amass

./: .cargo-rdme.toml  Cargo.toml  README.md
amass/: Cargo.toml
amass-macro/: Cargo.toml
amass-macro/src/: impl_type.rs  lib.rs  options.rs  parse.rs  syn_util.rs  variant_action.rs
amass-macro/src/proc_impl/: amass.rs  amass_apply.rs  amass_from.rs  amass_telety.rs  mod.rs
amass/src/: lib.rs
amass/tests/: test.rs
amass/tests/util/: types.rs
