[package]
name = "amass-macro"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinjneville/amass"
description = "Proc macros for amass. Not intended for public use."

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
telety.workspace = true

directed-visit.workspace = true