[package]
name = "amass"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/colinjneville/amass"
readme = "../README.md"
description = "Automatically generate `From` impls for nested enums, even across crates"
keywords = ["from", "telety", "derive", "convert"]
categories = ["rust-patterns"]

[dependencies]
amass-macro.workspace = true
telety.workspace = true